--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,10 @@
 # Example: postgresql://username:password@host:port/database?sslmode=require
 DATABASE_URL="postgresql://..."
 
+# Vercel Blob Storage
+# Get this token from: https://vercel.com/dashboard/stores
+# Required for uploading images to Vercel Blob Storage
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_..."
+
 # Node Environment (automatically set by Vercel)
 NODE_ENV="production"
